# egg

./: .gitignore  CODING_STYLE.md  CONTRIBUTING.md  README.md
Cuis/: Powerlang.pck.st
modules/ArgParser/: ArgParser.Class.st  ArgParser.st  ArgParserModule.Class.st  ArgParserModule.st  Command.Class.st  Command.st  Option.Class.st  Option.st  ParseResult.Class.st  ParseResult.st
modules/CodeSpecs/: ClassSpec.Class.st  CodeSpecsModule.Class.st  MetaclassSpec.Class.st  MethodSpec.Class.st  ModuleSpec.Class.st  SpeciesSpec.Class.st
modules/Compiler/: ArgumentBinding.Class.st  ArgumentEnvironment.Class.st  ArrayEnvironment.Class.st  Binding.Class.st  BlockScope.Class.st  CompilerModule.Class.st  DynamicBinding.Class.st  FalseBinding.Class.st  IdentifierBinder.Class.st  InlinedArgEnvironment.Class.st  LiteralBinding.Class.st  LocalBinding.Class.st  LocalEnvironment.Class.st  MessageInliner.Class.st  MessageInliner.st  MethodScope.Class.st  NestedDynamicBinding.Class.st  NilBinding.Class.st  SAssignmentNode.Class.st  SBlockNode.Class.st  SBraceNode.Class.st  SCascadeMessageNode.Class.st  SCascadeNode.Class.st  SCommentNode.Class.st  SCompilationError.Class.st  SCompilationResult.Class.st  SCompiler.Class.st  SDelimiterToken.Class.st  SEndToken.Class.st  SFFIDescriptor.Class.st  SIdentifierNode.Class.st  SInvalidPragmaError.Class.st  SLiteralNode.Class.st  SMessageNode.Class.st  SMethodNode.Class.st  SNumberNode.Class.st  SParseNode.Class.st  SParseTreeVisitor.Class.st  SPragmaNode.Class.st  SReturnNode.Class.st  (+21 more)
modules/Development/: BeginningCondition.Class.st  ClassSearch.Class.st  CodeSearch.Class.st  CodeSearchCondition.Class.st  CodeSearchResult.Class.st  CompiledMethod.Extension.st  DevelopmentModule.Class.st  EndingCondition.Class.st  ExactMatchCondition.Class.st  IncludingCondition.Class.st  MethodSearch.Class.st  MethodSearchScope.Class.st  PatternCondition.Class.st  SimilarityCondition.Class.st
modules/EPM/: Config.Class.st  Config.st  EPMModule.Class.st  EPMModule.st  ProjectGenerator.Class.st  ProjectGenerator.st
modules/FFI/: ByteArray.Extension.st  ByteArraySegment.Extension.st  CallbackBehavior.Class.st  CallbackMethod.Class.st  CharacterArray.Extension.st  ExternalHandle.Class.st  ExternalHeap.Class.st  ExternalLibrary.Class.st  ExternalMemory.Class.st  ExternalObject.Class.st  FFIDescriptor.Class.st  FFIMethod.Class.st  FFIModule.Class.st  Float.Extension.st  Integer.Extension.st  LibC.Class.st  LibraryLoader.Class.st  MallocHeap.Class.st  Object.Extension.st  String.Extension.st
modules/Filesystem/: Directory.Class.st  File.Class.st  FilesystemEntry.Class.st  FilesystemModule.Class.st  Path.Class.st  String.Extension.st
modules/ImageSegmentBuilder/: Behavior.Extension.st  Boolean.Extension.st  Builder.Class.st  Character.Extension.st  Class.Extension.st  False.Extension.st  ImageSegmentBuilderModule.Class.st  Metaclass.Extension.st  Module.Extension.st  Object.Extension.st  ObjectClosure.Class.st  Symbol.Extension.st  True.Extension.st  UndefinedObject.Extension.st  Writer.Class.st
modules/JSON/: BooleanAdaptor.Class.st  DataAdaptor.Class.st  IdAdaptor.Class.st  JsonAnySchema.Class.st  JsonArraySchema.Class.st  JsonBooleanSchema.Class.st  JsonCombinedSchema.Class.st  (+35 more)
runtime/cpp/: CMakeLists.txt  CODING_STYLE.md  Compat.h  FileImageSegment.cpp  FileImageSegment.h  ImageSegment.cpp  ImageSegment.h  KnownConstants.h  Launcher.cpp  Launcher.h  Loader.cpp  Loader.h  Main.cpp  Makefile  README.md  SymbolProvider.cpp  SymbolProvider.h  conanfile.py
runtime/cpp/Allocator/: G1GC.cpp  G1GC.h  GCSpace.cpp  GarbageCollector.cpp  GarbageCollector.h
runtime/cpp/Bootstrap/: BootstrappedKernel.cpp  BootstrappedKernel.h  Bootstrapper.cpp  Bootstrapper.h  CMakeLists.txt  CodeSpecs.cpp  CodeSpecs.h  MethodDictBuilder.cpp  MethodDictBuilder.h  README.md  SourceModuleLoader.cpp  SourceModuleLoader.h  TonelReader.cpp  TonelReader.h
runtime/cpp/Bootstrap/tests/: CMakeLists.txt  CompilationTest.cpp  IntegrationTest.cpp  MethodParserTest.cpp  SimpleParserTest.cpp  SourceLoadingTest.cpp
runtime/cpp/Compiler/: CMakeLists.txt  CompilationError.cpp  CompilationError.h  CompilationResult.h  CompilerTypes.h  LiteralValue.h  MessageInliner.cpp  MessageInliner.h  README.md  SCompiler.cpp  SCompiler.h  SSmalltalkCompiler.cpp  SSmalltalkCompiler.h  SemanticVisitor.cpp  SemanticVisitor.h  Stretch.h  TreecodeEncoder.cpp  TreecodeEncoder.h  egg_string.h
runtime/cpp/Compiler/AST/: SAssignmentNode.cpp  SAssignmentNode.h  SBlockNode.cpp  SBlockNode.h  SBraceNode.cpp  SBraceNode.h  SCascadeMessageNode.cpp  SCascadeMessageNode.h  SCascadeNode.cpp  SCascadeNode.h  SCommentNode.cpp  SCommentNode.h  SIdentifierNode.cpp  SIdentifierNode.h  SLiteralNode.cpp  SLiteralNode.h  SMessageNode.cpp  SMessageNode.h  SMethodNode.cpp  SMethodNode.h  SNumberNode.cpp  SNumberNode.h  SParseNode.cpp  SParseNode.h  SParseNodeVisitor.h  SPragmaNode.cpp  SPragmaNode.h  SReturnNode.cpp  SReturnNode.h  SScriptNode.cpp  SScriptNode.h  SSelectorNode.cpp  SSelectorNode.h  SStringNode.cpp  SStringNode.h
runtime/cpp/Compiler/Backend/: SCompiledBlock.h  SCompiledMethod.cpp  SCompiledMethod.h
runtime/cpp/Compiler/Binding/: ArgumentBinding.h  ArgumentEnvironment.h  ArrayEnvironment.h  Binding.h  BlockScope.cpp  BlockScope.h  CMakeLists.txt  ClassBinding.h  ConstantBinding.h  FieldBinding.h  GlobalBinding.h  LocalBinding.cpp  LocalBinding.h  LocalEnvironment.h  MethodBinding.h  MethodScope.cpp  MethodScope.h  PseudoVariableBindings.cpp  PseudoVariableBindings.h  Scope.h  ScriptScope.cpp  ScriptScope.h  StackEnvironment.h  TemporaryBinding.h
runtime/cpp/Compiler/Parser/: SSmalltalkParser.cpp  SSmalltalkParser.h  SSmalltalkScanner.cpp  SSmalltalkScanner.h  SToken.h  Stream.h
runtime/cpp/Compiler/tests/: CMakeLists.txt  MessageInlinerTest.cpp  ParserTest.cpp  README.md  ScannerTest.cpp  test_main.cpp
runtime/cpp/Evaluator/: EvaluationContext.cpp  EvaluationContext.h  Evaluator.cpp  Evaluator.h  Runtime.cpp  Runtime.h  SExpressionLinearizer.cpp  TreecodeDecoder.h
runtime/cpp/Utils/: egg_string.h
(+759 files in other folders)
